--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,400italic,700,700italic%7CCinzel");
 @import url("https://fonts.googleapis.com/css?family=Spectral:300,400,400italic,700,700italic%7CCinzel");
 body {
-  font-family:Roboto;
+  text-align: center;
+  font-family: Roboto;
   background-color:#fff8e3;
   margin:0px;
   margin-top:-20px;
@@ -27,4 +28,16 @@ body {
   font-family: Spectral;
   color: white;
   margin: 0px;
+}
+.SignInButton {
+  height: 46px;
+  width: 191px;
+  background: url("assets/btn_google_signin_light_normal.png") no-repeat;
+  border:0px
+}
+.SignInButton:active {
+  height: 46px;
+  width: 191px;
+  background: url("assets/btn_google_signin_light_pressed.png") no-repeat;
+  border:0px
 }
