--- a/index.css
+++ b/index.css
@@ -29,6 +29,11 @@ body {
   color: white;
   margin: 0px;
 }
+.content {
+  margin: 30px;
+  margin-left: 100px;
+  margin-right: 100px;
+}
 .g-signin2 {
   display: inline-block;
 }
