--- a/welcome.css
+++ b/welcome.css
@@ -36,9 +36,9 @@ body {
 }
 .button {
   padding:20px;
-  background: #9D0526;
+  background-image: #9D0526;
   border-radius: 10px;
 }
 .button:active {
-  background: #980021;
+  background-image: #980021;
 }
