--- a/terms-of-service.css
+++ b/terms-of-service.css
@@ -35,6 +35,6 @@ body {
   margin-right: 100px;
 }
 ol {
-  justify-content:space-around;
-  display:flex;
+  margin-left:20%;
+  margin-right:20%;
 }
